--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@ html{
    
    /*background:linear-gradient(-90deg, #fdea79,#a8a355, #4f4039);*/
    background-image: url(https://i.pinimg.com/564x/66/95/2d/66952daa69cc3f390d403b7835750f30.jpg);
-  background-attachment: fixed;
+ /* background-attachment: fixed;*/
 
 }
 html::before{
