--- a/src/style.css
+++ b/src/style.css
@@ -33,7 +33,7 @@ html::before{
     margin:auto;
     font-family: "Gill Sans Extrabold", Helvetica, sans-serif ;
     background-color:rgba(255, 255, 255, 0.959);
-    margin: 8vh 25vw;
+    margin: 18vh 25vw 8vh 25vw;
     padding: 3vh 4vw 5vh 4vw;
     border-radius: 24px;    
     line-height : 25px;
